[tool.poetry]
name = "python-concurrent-db-io-tests"
version = "0.1.0"
description = ""
authors = ["Okal Otieno <okal@justokal.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3.18"
pymysql = "0.9"
aiomysql = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
